Add logo & Links

--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@ rel="stylesheet">
                     <h2 class="subtitle has-text-centered">
                         Coming Soon! 🏎️💨
                     </h2>
+                    <div class="columns is-centered has-text-centered">
+                        <div class="column">
+                            <a class="button is-info is-large" href="https://github.com/WalnutEagle/Scalable-Offline-Metrics-for-Autonomous-Driving">
+                                <span class="icon">
+                                    <i class="fab fa-github"></i>
+                                </span>
+                                <span>GitHub</span>
+                            </a>
+                            <p>Coming Soon</p>
+                        </div>
+                        <div class="column">
+                            <a class="button is-primary is-large" href="#">
+                                <span class="icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </span>
+                                <span>Paper</span>
+                            </a>
+                            <p>Coming Soon</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
