--- a/index.html
+++ b/index.html
@@ -52,20 +52,18 @@ rel="stylesheet">
                     </h2>
                     <div class="columns is-centered has-text-centered">
                         <div class="column">
-                            <a class="button is-info is-large" href="https://github.com/WalnutEagle/Scalable-Offline-Metrics-for-Autonomous-Driving">
+                            <a class="button is-black is-rounded is-large" href="https://github.com/WalnutEagle/Scalable-Offline-Metrics-for-Autonomous-Driving">
                                 <span class="icon">
                                     <i class="fab fa-github"></i>
                                 </span>
-                                <span>GitHub</span>
                             </a>
                             <p>Coming Soon</p>
                         </div>
                         <div class="column">
-                            <a class="button is-primary is-large" href="#">
+                            <a class="button is-black is-rounded is-large" href="#">
                                 <span class="icon">
                                     <i class="fas fa-file-pdf"></i>
                                 </span>
-                                <span>Paper</span>
                             </a>
                             <p>Coming Soon</p>
                         </div>
