add date and update the date for paper upload

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ rel="stylesheet">
                                     <i class="fas fa-file-pdf"></i>
                                 </span>
                             </a>
-                            <p>Coming Soon</p>
+                            <p>Coming Soon - Oct 22-2025</p>
                         </div>
                     </div>
                 </div>
